--- a/app.html
+++ b/app.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>App Name: A coding Project - DL Code</title>
+    <title>Cento: A coding Project - DL Code</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -23,7 +23,7 @@
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="img/Logo.png" class="d-inline-block align-text-top" width="30" height="24"> Cento</a>
+            <a class="navbar-brand logoFont" href="#"><img src="img/Logo.png" class="d-inline-block align-text-top" width="30" height="24"> Cento</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -51,9 +51,52 @@
     </nav>  
     <!-- Main section -->
     <main class="flex-shrink-0">
-        <div class="container">
-            
-        </div> 
+        <div class="container mt-3">
+            <div class="row row-cols-1 row-cols-lg-2">
+                <div class="col-lg-5 col">
+                    <h1 class="display-5 fw-bold lh-5 mb-3">Cento: A coding Project</h1>
+                    <h4 class="lead">
+                        A javascript exercise to display the numbers 
+                        1 to 100 using loops, displaying the even
+                        numbers in <b>Bold</b>.
+                    </h4>
+                    <h2 class="mt-5 border-bottom border-2">
+                        Instructions
+                    </h2>
+                    <p>
+                        Enter a starting value and an ending value. 
+                        Press the button and the values will appear.
+                    </p>
+                </div>
+                <div class="col-lg-8 col">
+                    <div>
+                        <h5>Enter Values:</h5>
+                        <form class="row gy-2 gx-3">
+                            <div class="col">
+                                <input type="number" class="form-control" id="startValue" 
+                                placeholder="Start Value" value=0 aria-label="Start Value">
+                            </div>
+                            <div class="col">
+                                <input type="number" class="form-control" id="endValue" 
+                                placeholder="End Value" value=100 aria-label="End Value">
+                            </div>
+                            <div class="col-12 d-flex justify-content-end">
+                                <button type="button" id="btnSubmit" class="btn btn-dark">Display Numbers</button>
+                            </div>
+                        </form>
+                        <h2 class="mt-5 border-bottom border-2">Results</h2>
+                        <div class="table-responsive">
+                            <table class="table table-striped table-sm">
+                                <tbody id="results">
+                                 <!---Results-->
+
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>         
     </main>    
     <footer class="footer mt-auto py-3">
         <div class="container-fluid">
@@ -79,10 +122,14 @@
             </div>
         </div>
     </footer>
+    
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
     </script>
     <script src="/js/site.js"></script>
+    <script>
+        document.getElementById("btnSubmit").addEventListener("click", getValues);
+    </script>
 </body>    
 </html>
